--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <section class="header">
       <nav>
-        <img src="img/logo.svg" class="logo" />
+        <img src="img/logo.png" class="logo" />
         <ul class="nav-links">
           <li><a href="#">Popular Places</a></li>
           <li><a href="#">Travel Outside</a></li>
