--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
   </head>
   <body>
     <section class="header">
-      <nav>
+      <nav id="navBar">
         <img src="img/logo.png" class="logo" />
         <ul class="nav-links">
-          <li><a href="#">Popular Places</a></li>
+          <li><a href="#" class="active">Popular Places</a></li>
           <li><a href="#">Travel Outside</a></li>
           <li><a href="#">Online Packages</a></li>
         </ul>
         <a href="#" class="Register-btn">Register Now</a>
+        <i class="fas fa-bars" onclick="togglebtn()"></i>
       </nav>
       <div class="container">
         <h1>Find Your Next Stay</h1>
@@ -140,6 +141,58 @@
           <img src="img/new-delhi.png" />
           <h3>New Delhi</h3>
         </div>
+      </div>
+      <div class="cta">
+        <h3>Sharing <br />Is Earning Now</h3>
+        <p>
+          Great opportunity to make money by <br />sharing your extra space.
+        </p>
+        <a href="#" class="cta-btn">Know More</a>
+      </div>
+      <h2 class="sub-title">Travelers Stories</h2>
+      <div class="stories">
+        <div>
+          <img src="img/story-1.png" />
+          <p>Popular European countries with a budget of just $10,000</p>
+        </div>
+        <div>
+          <img src="img/story-2.png" />
+          <p>Traveled more than 100 Countries in less than a year</p>
+        </div>
+        <div>
+          <img src="img/story-3.png" />
+          <p>Best experience you get while traveling to Thailand</p>
+        </div>
+      </div>
+      <a href="#" class="start-btn">Start making money</a>
+      <div class="about-msg">
+        <h2>About Staybnb</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. At fugiat
+          distinctio nemo vero soluta accusamus numquam illo eos est recusandae?
+          Voluptatibus saepe in veniam debitis illum ducimus explicabo quam et
+          officiis dolores, modi quas, aliquam enim est tempora repudiandae
+          aspernatur ut voluptates. Illum ea aliquam facere ratione dolore
+          suscipit expedita. Doloremque accusamus nulla fugiat omnis incidunt
+          ratione quis repellat autem possimus nam sapiente cumque fuga et hic,
+          ad aliquid officia vero illum porro? Nemo dolores tempore nam sapiente
+          laborum quia, hic itaque, odio inventore perferendis nostrum qui
+          voluptas fugiat, molestias totam quas harum tenetur reprehenderit
+          reiciendis accusantium? Accusantium quaerat ab culpa vel sapiente
+          dolores quo error ad cum corrupti obcaecati beatae sunt, eligendi,
+          magni soluta? Culpa, quaerat porro? Accusamus iste deleniti veritatis
+          corrupti eius omnis nam at animi possimus dolorum soluta repellat
+          impedit numquam ratione, officia quos vero blanditiis quas?
+        </p>
+      </div>
+      <div class="footer">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <hr />
+        <p>Copyright 2021, Easy Tutorials</p>
       </div>
     </section>
     <script src="script.js"></script>
