--- a/listing.html
+++ b/listing.html
@@ -206,7 +206,14 @@
     </div>
     <div class="pagination">
       <img src="img/arrow.png" />
-      <img src="img/arrow.png" />
+      <span class="current">1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
+      <span>5</span>
+      <span>&middot; &middot; &middot; &middot;</span>
+      <span>20</span>
+      <img src="img/arrow.png" class="right-arro" />
     </div>
     <div class="footer">
       <a href="#"><i class="fab fa-facebook-f"></i></a>
