--- a/listing.html
+++ b/listing.html
@@ -13,9 +13,11 @@
   </head>
   <body>
     <nav id="navBar" class="navbar-white hidemenu">
-      <img src="img/logo-red.png" class="logo" />
+      <a href="/index.html">
+        <img src="img/logo-red.png" class="logo" />
+      </a>
       <ul class="nav-links">
-        <li><a href="#" class="active">Popular Places</a></li>
+        <li><a href="listing.html" class="active">Popular Places</a></li>
         <li><a href="#">Travel Outside</a></li>
         <li><a href="#">Online Packages</a></li>
       </ul>
