--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav id="navBar">
         <img src="img/logo.png" class="logo" />
         <ul class="nav-links">
-          <li><a href="#" class="active">Popular Places</a></li>
+          <li><a href="listing.html" class="active">Popular Places</a></li>
           <li><a href="#">Travel Outside</a></li>
           <li><a href="#">Online Packages</a></li>
         </ul>
